include $(top_srcdir)/Makefile.tool.am

noinst_PROGRAMS  = mmt-@VGCONF_ARCH_PRI@-@VGCONF_OS@
if VGCONF_HAVE_PLATFORM_SEC
noinst_PROGRAMS += mmt-@VGCONF_ARCH_SEC@-@VGCONF_OS@
endif

# _FORTIFY_SOURCE enables some checks which depend on glibc for linking
CFLAGS += -U_FORTIFY_SOURCE -I/etc/sysconfig/nvidia/NVIDIA-Linux-x86_64-390.77/kernel/nvidia-uvm -I/etc/sysconfig/nvidia/NVIDIA-Linux-x86_64-390.77/kernel/common/inc/

MMT_SOURCES_COMMON = mmt_main.c mmt_nv_ioctl.c mmt_instrument.c mmt_trace.c \
			mmt_nouveau_ioctl.c mmt_trace_bin.c mmt_fglrx_ioctl.c \
			nvuvm_ioctl.h

mmt_@VGCONF_ARCH_PRI@_@VGCONF_OS@_SOURCES      = \
	$(MMT_SOURCES_COMMON)
mmt_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CPPFLAGS     = \
	$(AM_CPPFLAGS_@VGCONF_PLATFORM_PRI_CAPS@)
mmt_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CFLAGS       = \
	$(AM_CFLAGS_@VGCONF_PLATFORM_PRI_CAPS@)
mmt_@VGCONF_ARCH_PRI@_@VGCONF_OS@_DEPENDENCIES = \
	$(TOOL_DEPENDENCIES_@VGCONF_PLATFORM_PRI_CAPS@)
mmt_@VGCONF_ARCH_PRI@_@VGCONF_OS@_LDADD        = \
	$(TOOL_LDADD_@VGCONF_PLATFORM_PRI_CAPS@)
mmt_@VGCONF_ARCH_PRI@_@VGCONF_OS@_LDFLAGS      = \
	$(TOOL_LDFLAGS_@VGCONF_PLATFORM_PRI_CAPS@)
mmt_@VGCONF_ARCH_PRI@_@VGCONF_OS@_LINK = \
	$(top_builddir)/coregrind/link_tool_exe_@VGCONF_OS@ \
	@VALT_LOAD_ADDRESS_PRI@ \
	$(LINK) \
	$(mmt_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CFLAGS) \
	$(mmt_@VGCONF_ARCH_PRI@_@VGCONF_OS@_LDFLAGS)

if VGCONF_HAVE_PLATFORM_SEC
mmt_@VGCONF_ARCH_SEC@_@VGCONF_OS@_SOURCES      = \
	$(MMT_SOURCES_COMMON)
mmt_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CPPFLAGS     = \
	$(AM_CPPFLAGS_@VGCONF_PLATFORM_SEC_CAPS@)
mmt_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CFLAGS       = \
	$(AM_CFLAGS_@VGCONF_PLATFORM_SEC_CAPS@)
mmt_@VGCONF_ARCH_SEC@_@VGCONF_OS@_DEPENDENCIES = \
	$(TOOL_DEPENDENCIES_@VGCONF_PLATFORM_SEC_CAPS@)
mmt_@VGCONF_ARCH_SEC@_@VGCONF_OS@_LDADD        = \
	$(TOOL_LDADD_@VGCONF_PLATFORM_SEC_CAPS@)
mmt_@VGCONF_ARCH_SEC@_@VGCONF_OS@_LDFLAGS      = \
	$(TOOL_LDFLAGS_@VGCONF_PLATFORM_SEC_CAPS@)
mmt_@VGCONF_ARCH_SEC@_@VGCONF_OS@_LINK = \
	$(top_builddir)/coregrind/link_tool_exe_@VGCONF_OS@ \
	@VALT_LOAD_ADDRESS_SEC@ \
	$(LINK) \
	$(mmt_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CFLAGS) \
	$(mmt_@VGCONF_ARCH_SEC@_@VGCONF_OS@_LDFLAGS)
endif
